Fix beadcrum postion, remove collapse button in header

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 * Author: Dennis Ji
 * Template: Metro Admin Template - Bootstrap Theme
 * Version: 1.0.0
-* Bootstrap version: 2.3.1
-* Copyright 2013 Bootstrap Metro Dashboard
+* Bootstrap version: 3.3.5
+* Copyright 2015 Bootstrap Metro Dashboard
 * www: http://clabs.co
 * mail: lukasz@clabs.co
 * You can buy this theme on WrapBootstrap: https://wrapbootstrap.com/user/Bootstrap Metro Dashboard
@@ -335,13 +335,13 @@ h6 {
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
 }
 
-.brand img {
-	margin: -12px 0px -5px 0px;
+.navbar-brand img {
+    margin: -12px 0px -5px 0px;
 }
 
-a.brand span {
-	color: #fff;
-	text-shadow: none;
+a.navbar-brand span {
+    color: #fff;
+    text-shadow: none;
 }
 
 .header-nav {
@@ -702,17 +702,17 @@ ul.messages li .message {
 }
 
 .breadcrumb {
-	margin: -28px -28px 28px -28px;
-	line-height: 34px;
-	background: #eee;
-	border: 0px;
-	color: #aaa;
-	-webkit-box-shadow: none;
-	   -moz-box-shadow: none;
-	   		box-shadow: none;
-  	-webkit-border-radius: 0px;
-       -moz-border-radius: 0px;
-	        border-radius: 0px; 	
+    margin: 23px -28px;
+    line-height: 34px;
+    background: #eee;
+    border: 0px;
+    color: #aaa;
+    -webkit-box-shadow: none;
+       -moz-box-shadow: none;
+                    box-shadow: none;
+    -webkit-border-radius: 0px;
+   -moz-border-radius: 0px;
+            border-radius: 0px; 	
 }
 
 .breadcrumb span {
@@ -720,14 +720,14 @@ ul.messages li .message {
 }
 
 .breadcrumb a {
-	color: #aaa;
-	text-shadow: 0px 1px 1px #fff;	
+    color: #aaa;
+    text-shadow: 0px 1px 1px #fff;
 }
 
 .breadcrumb a:hover {
-	color: #646464;
-	text-shadow: 0px 1px 1px #fff;
-	text-decoration: none;	
+    color: #646464;
+    text-shadow: 0px 1px 1px #fff;
+    text-decoration: none;
 }
 
 .dark {
@@ -2491,16 +2491,17 @@ footer {
 }
 	
 .sparkLineStats li {
-	margin-bottom: 0; 
-	line-height: 42px; 
-	padding-top:3px; 
-	font-size: 12px
+    margin-bottom: 0;
+    line-height: 42px;
+    padding-top:3px;
+    font-size: 12px;
+    list-style: none;
 }
 
 .sparkLineStats li .number {
 	font-size: 17px;
-	font-weight: 700; 
-	padding:0px 0px 0px 2px; 
+	font-weight: 700;
+	padding:0px 0px 0px 2px;
 	color: #fff;
 }
 
